# cacao-accounting

./: .coveragerc  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitpod.sh  .gitpod.yml  .pydocstyle  .pylintrc  .replit  .yarnrc  404.html  85 (3).diff  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Developer_Certificate_of_Origin  Dockerfile  ESTADO_ACTUAL.md  FIXME.md  ISSUES.md  LICENSE  Licencias_de_Terceros.md  MANIFEST.in  Makefile  PENDIENTE.md  Procfile  README.md  REVIEW_AUDITORIA.md  ROAD_MAP.md  SECURITY.md  SESSIONS.md  azure-pipelines.yml  codecov.yml  desktop.py  development.txt  diff  docker-compose.yml  docker-entry-point  docker-entry-point.py  docker-entry-point.sh  (+28 more)
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: accounting-python.instructions.md  global.instructions.md  reports-html.instructions.md  search-select-fields.instructions.md  transaction-forms-html.instructions.md
.github/workflows/: codeql-analysis.yml  container.yml  dbcheck.yml  desktop-tests.yml  publish.yml  pydocstyle.yml  pylint.yml  python-coverage.yml  python-package.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
ROAD_MAP/: index.html
about/: index.html
api/: index.html
blog/: index.html
cacao_accounting/: I18N.py  __init__.py  __main__.py  approval_engine.py  appveyor.yml  audit_trail_service.py  cache.py  cli.py  collaboration_service.py  conf.py  config.py  consultas.py  decorators.py  desktop.py  docker-compose.yml  document_identifiers.py  exception.py  fiscal_persistence_service.py  fiscal_preview_service.py  form_preferences.py  ledger_queries.py  limiter.py  list_filters.py  loggin.py  logs.py  metadata.py  module_badges.py  modulos.py  party_management.py  party_settings.py  registro.py  run.py  runtime_mode.py  schema.py  search_select.py  server.py  tax_pricing_service.py  tax_rule_service.py  tools.py  version.py  (+1 more)
cacao_accounting/accounting_engine/: __init__.py  document_builders.py  gl_posting_builder.py
cacao_accounting/admin/: __init__.py
cacao_accounting/ajax/: __init__.py
cacao_accounting/api/: __init__.py  dashboard.py  line_import.py  line_import_registry.py
cacao_accounting/app/: __init__.py
cacao_accounting/auth/: README.md  __init__.py  forms.py  helpers.py  permisos.py  roles.py
cacao_accounting/bancos/: __init__.py  cash_forecast.py  cash_forecast_service.py  forms.py  reconciliation_service.py  statement_service.py
cacao_accounting/compras/: __init__.py  forms.py  (+2 more)
cacao_accounting_mockup/: __init__.py  schema.py
changelog/: index.html
ci/: index.html
configuracion/: index.html
container/: index.html
contenedores/: index.html
database/: index.html
dependencies/: index.html
despliegue/: index.html
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ROAD_MAP.md  about.md  api.md  cacaoctl.md  changelog.md  ci.md  conf.py  configuracion.md  container.md  contenedores.md  database.md  dependencies.md  despliegue.md  despliegue.rst  faq.es.md  faq.md  fuentes.md  index.md  index.rst  oci_images.md  py_database.md  py_database_mysql.md  py_database_psql.md  py_https.md  py_os.md  py_pypi.md  py_redis.md  py_server.md  py_sources.md  py_systemd.md  pypi.md  set_up.md  setup.md  shared_host.md  sources.md
es/: index.html
examples/: cacao-accounting.service
faq/: index.html
fuentes/: index.html
modulos/: compras.md  contabilidad.md  inventario.md  relaciones.md  setup.md  ventas.md
oci_files/: mysql.sh
oci_images/: index.html
overrides/: home.html
py_database/: index.html
py_database_mysql/: index.html
py_database_psql/: index.html
py_https/: index.html
py_os/: index.html
py_pypi/: index.html
py_redis/: index.html
py_server/: index.html
py_sources/: index.html
py_systemd/: index.html
pypi/: index.html
reports/: cash-management-functional-audit.md  inventory-functional-audit.md  o2c-functional-audit.md  r2r-functional-audit.md  s2p-functional-audit.md
scripts/: run_server.sh  run_test.sh
scritps/: check.sh  lint.sh  run.sh  setup.sh
search/: search_index.json
set_up/: index.html
setup/: index.html
shared_host/: index.html
source/: index.rst
sources/: index.html
src/: package-lock.json
tests/: auth.py  base_test.py  check.sh  database.py  nonfree-database.py  nonfree_database.py  opensource_database.py  server.py  setup_mysql.sql  setup_postgresl.sql  test_001.py  test_001varios.py  test_002auth.py  test_003views.py  test_00basicos.py  test_01forms.py  test_01vistas.py  test_02forms.py  test_02vistas.py  test_03webactions.py  test_04database_schema.py  test_05document_flow.py  test_06transaction_closure.py  test_07posting_engine.py  test_07series_audit.py  test_08_reconciliation_reports.py  test_09_journal_entry_form.py  test_10_smart_select_js.py  test_11_contabilidad_coverage.py  test_12_recurring_journals.py  test_accounting_book_access.py  test_accounting_exhaustive.py  test_actions.py  test_admin_blueprint.py  test_approval_engine.py  test_audit_trail_journal.py  test_auth.py  test_auth_jwt.py  test_auth_limiter.py  test_bank_account_numbering.py  (+72 more)
theme_override_home/: home.html  main.html
(+520 files in other folders)
