[project]
name = "cacao-accounting"
description = "Accounting solution for the management of Accounts Payable, Accounts Receivable, Inventory, Treasury and General Accounting."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "William Moreno Reyes", email = "williamjmorenor@gmail.com"},
  {name = "BMO Soluciones", email = "development@bmogroup.solutions"},
]
license = {file = "LICENSE"}
keywords = ["accounting"]
classifiers = [
  'Development Status :: 1 - Planning',
  'Framework :: Flask',
  'License :: OSI Approved :: Apache Software License',
  'Natural Language :: Spanish',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Programming Language :: Python :: Implementation :: CPython'
]
dynamic = ["version", "dependencies"]

[project.scripts]
cacaoctl="cacao_accounting:command"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "cacao_accounting.version.VERSION"}

[tool.setuptools.packages.find]
include = ["cacao_accounting"]
namespaces = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = "(^|/)(build|dist|venv|\\.venv)/"

[tool.ruff]
target-version = "py312"
line-length = 127
extend-exclude = ["build", "dist", "venv", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["I001"]

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
	".git",
	"__pycache__",
	".venv",
	"venv",
	"build",
	"dist",
	".mypy_cache",
	".ruff_cache",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
exclude = "(?x)(^build/|^dist/|^venv/|^\\.venv/)"
disable_error_code = [
	"import-untyped",
	"attr-defined",
	"name-defined",
	"union-attr",
	"arg-type",
	"index",
	"return-value",
]

[tool.pytest.ini_options]
markers = [
    "slow: Pruebas unitarias que tardan mucho en ejecurse, normalmente requieren un set de datos real.",
]
